--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,11 @@
-h1= title
-p Welcome to #{title}
+h1 Pivotal Review
+
+.wrap
+  form(action="/sessions/new", method="post")
+    p
+      \Input your Pivotal Tracker Token
+    p
+      input(type="text", name="token")
+    p
+      input(type="submit", value="Login to Pivotal Tracker")
+
