cleanup, checking this out on another machine

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
     title Pivotal Review
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    h1 Pivotal Review
+
     if flash.info
       INFOS
       .flash.info= flash.info.join("<br>")
